import public "base.proto";
import public "user.proto";
import public "zhajinhua.proto";

package bbproto;


// 德州扑克的
enum ETHType {
    TH_TYPE_GAOPAI          = 1;       //顺子
    TH_TYPE_YIDUI           = 2;       //顺子
    TH_TYPE_LIANGDUI        = 3;       //顺子
    TH_TYPE_THREE           = 4;       //顺子
    TH_TYPE_SHUNZI          = 5;       //顺子
    TH_TYPE_TONGHUA         = 6;       //同花
    TH_TYPE_HULU            = 7;       //葫芦
    TH_TYPE_SITIAO          = 8;       //四条
    TH_TYPE_TONGHUASHUN     = 9;       //同花顺
    TH_TYPE_HUANGSHITONGHUASHUN     = 10;       //同花顺
}


enum ETHAction {
    TH_DESK_BET_TYPE_BET  		= 1;        //押注
    TH_DESK_BET_TYPE_CALL  	    = 2;        //跟注,和别人下相同的筹码
    TH_DESK_BET_TYPE_FOLD  	    = 3;        //弃牌
    TH_DESK_BET_TYPE_CHECK 	    = 4;        //让牌
    TH_DESK_BET_TYPE_RAISE 	    = 5;        //加注
    TH_DESK_BET_TYPE_RERRAISE  	= 6;        //再加注
    TH_DESK_BET_TYPE_ALLIN      = 7;        //全下
}

message ThRoom {
    optional ProtoHeader	header				     = 1;
    optional int32          reqType                  = 2;    //请求进入 还是退出 0 表示退出,1,表示进入
    optional int64          jackpot                  = 3;    //奖金池
    repeated THUser         users                    = 4;    //已经坐下的玩家的信息
    optional int32          betTime                  = 5;    //押注结束时间
    optional int32          deskStatus               = 6;    //桌子状态
    repeated Pai            publicPais               = 7;    //公共牌
    optional uint32         betUserId                = 8;   //押注的玩家Id
    optional uint32         bigBlind                 = 9;   //大盲注
    optional uint32         smallBlind               = 10;   //大盲注
    optional uint32         butten                   = 11;   //庄家
    optional int32          betRemainTime            = 12;   //剩余下注的时间
}

//刚进来的人
message THRoomAddUserBroadcast{
    optional ProtoHeader	header				     = 1;
    optional THUser         user                     = 2;    //新增加的User的信息
}

message THPork{
    optional        int32       thType         = 1;         //牌的类型
    repeated        Pai         pais           = 2;         //
}


message THBet{
    optional ProtoHeader	header				     = 1;
    optional int32          betType                  = 2;   //类型:弃牌,跟注,加注
    optional int32          betAmount                = 3;   //押注的金额
    optional uint32         nextBetUser              = 4;   //返回结果时,返回下次押注的人
}

message THBetBegin{
    optional ProtoHeader	header				     = 1;
    optional uint32         dealer                   = 2;   //庄家
    optional THUser         bigBlind                 = 3;   //大盲注
    optional THUser         smallBlind               = 4;   //小盲注
    optional uint32         betUserNow               = 5;   //当前押注的人
}


message THBetBroadcast{
    optional ProtoHeader	header				     = 1;
    optional int32          betType                  = 2;   //类型:弃牌,跟注,加注
    optional int32          betAmount                = 3;   //押注的金额
    optional THUser         user                     = 4;   //押注的玩家
    optional uint32         nextBetUserId            = 5;   //押注的玩家
}


// 德州扑克中的User
message THUser{
    optional User       user                    = 1;
    repeated Pai        handPais                = 2;            //手牌
    optional int32      status                  = 3;            //玩家的状态
    optional int32      seatNumber              = 4;            //座位号
}



